Change the path.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,800" rel="stylesheet">
 
     <!-- Styles -->
-    <link href="/css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
 
   <body>
@@ -19,7 +19,7 @@
     </div>
 
     <!-- Scripts -->
-    <script src="/js/jquery-3.2.1.js"></script>
-    <script src="/js/index.js"></script>
+    <script src="js/jquery-3.2.1.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
