Copy to clipboard clicking on the Hex code

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
   </head>
 
   <body>
+    <div class='copied'>Copied to clipboard</div>
     <div>
-      <h1 class="hex-color">#3498db</h1>
+      <input readonly class="hex-color" value="#3498db">
       <button class="change-color-btn">New Color</button>
     </div>
 
