--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Hex Color Generator</title>
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;800&display=swap" rel="stylesheet">
 
     <!-- Styles -->
     <link href="/css/style.css" rel="stylesheet">
